[package]
name = "cork"
version = "0.2.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2018"
description = "A command-line calculator for hex-lovers."
license = "GPL-2.0-only"
repository = "https://github.com/RedDocMD/cork"
readme = "README.md"
keywords = ["calculator", "terminal"]
categories = ["command-line-utilities", "mathematics"]

[dependencies]
rustyline = "8.0.0"
pest = "2.1.3"
pest_derive = "2.1.0"
home = "0.5.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
getset = "0.1"
anyhow = "1"
clap = "2.33.3"
thiserror = "1.0.30"