[package]
name = "cork"
version = "0.2.3"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2021"
description = "A command-line calculator for hex-lovers."
license = "GPL-2.0-only"
repository = "https://github.com/RedDocMD/cork"
readme = "README.md"
keywords = ["calculator", "terminal"]
categories = ["command-line-utilities", "mathematics"]

[dependencies]
rustyline = "9"
pest = "2.1.3"
pest_derive = "2.1.0"
home = "0.5.3"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
getset = "0.1.2"
anyhow = "1"
clap = { version = "3.0.14", features = ["cargo", "derive"] }
thiserror = "1.0.30"
strum = { version = "0.23.0", features = ["derive"] }
colored = "2.0.0"
