[package]
name = "cork"
version = "0.2.6"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2021"
description = "A command-line calculator for hex-lovers."
license = "GPL-2.0-only"
repository = "https://github.com/RedDocMD/cork"
readme = "README.md"
keywords = ["calculator", "terminal"]
categories = ["command-line-utilities", "mathematics"]

[dependencies]
rustyline = "10"
pest = "2.4.1"
pest_derive = "2.4.1"
home = "0.5.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
getset = "0.1.2"
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
thiserror = "1"
strum = { version = "0.24.1", features = ["derive"] }
colored = "2.0.0"
once_cell = "1.16.0"
